--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -210,7 +210,7 @@
       color: #404733;
     }
 
-    .price-challenge .bold-real-price {
+    .price-challenge .real-price .bold-real-price {
       font-weight: 700;
     }
    
