--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -69,9 +69,9 @@
     </div>
     <div class="price-challenge">
      
-      <div class="real-price rounded no-letters"><span class="bold-real-price">{{ var.price | money_without_trailing_zeros }}</span><sup>00</sup></div>
+      <div class="real-price rounded no-letters">{{ var.price | money_without_trailing_zeros }}</div><sup class="bold-real-price">00</sup>
       
-        <div class="compared-at-price"><strike class="rounded no-letters"><span class="bold-real-price ">{{ original_item_cap_total_with_bundle | money_without_trailing_zeros }}</span><sup>00</sup></strike></div>
+        <div class="compared-at-price"><strike class="rounded no-letters">{{ original_item_cap_total_with_bundle | money_without_trailing_zeros }}</strike></div><sup class="bold-real-price">00</sup>
     
     </div>
   </div>
@@ -202,7 +202,7 @@
     .price-challenge {
       padding: 10px;
       font-family: 'Poppins';
-      font-weight: 400;
+      font-weight: 700;
       font-size: 38px;
       line-height: 100%;
       text-align: right;
@@ -211,7 +211,7 @@
     }
 
     .price-challenge .real-price .bold-real-price {
-      font-weight: 700;
+      font-weight: 400;
     }
    
 
