--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -212,7 +212,8 @@
     }
 
     .price-challenge .price-with-null .thin-real-price {
-      font-weight: 400;
+      position: relative;
+      top: 15px;
     }
    
 
