--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -70,7 +70,7 @@
     </div>
     <div class="price-challenge">      
       <div class="price-with-null"><div class="real-price rounded no-letters">{{ var.price | money_without_trailing_zeros }}</div><sup class="thin-real-price">00</sup></div>   
-      <div class="initial-price"><div class="real-price rounded no-letters">{{ compared_at_challenge | money_without_trailing_zeros }}</div><sup class="thin-real-price">00</sup></div>                 
+      <strike class="initial-price"><div class="real-price rounded no-letters">{{ compared_at_challenge | money_without_trailing_zeros }}</div><sup class="thin-real-price">00</sup></strike>                 
     </div> 
   </div>
   {% endif %} 
@@ -218,7 +218,7 @@
       font-size: 13px;
     }
 
-    .initial-price .thin-real-price {
+    .price-challenge .initial-price .thin-real-price {
       position: relative;
       top: 17px;
     }
