--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -68,7 +68,7 @@
     </div>
     <div class="price-challenge">      
       <div class="price-with-null"><div class="real-price rounded no-letters">{{ var.price | money_without_trailing_zeros }}</div><sup class="thin-real-price">00</sup></div>  
-      <strike class="initial-price"><div class="real-price">{{ "18500" | money_without_trailing_zeros }}</div><span class="thin-real-span">00</span></strike>                 
+      <strike class="initial-price"><div class="real-price">{{ "18500" | money_without_trailing_zeros }}</div><span class="thin-real-span">.00</span></strike>                 
     </div> 
   </div>
   {% endif %} 
@@ -218,7 +218,6 @@
 
     .price-challenge .initial-price .thin-real-span {
       position: relative;
-      top: 17px;
     }
 
 
