--- a/snippets/product-supplement-info-section.liquid
+++ b/snippets/product-supplement-info-section.liquid
@@ -1,7 +1,10 @@
 <section id="info-section">
   <div class="container">
+    {% if product.title contains "Curalin Mounthly Deals" %}
+    <img class="main-image" src="{{ "men-with-text.png" | asset_url }}" width="362" height="839" alt="Joint Info" loading="lazy">
+    {% else %}
     <img class="main-image" src="{{ "product-supplement-info-section-main-image.png" | asset_url }}" alt="Joint Info" loading="lazy">
-
+{% endif %}
     <div class="content">
       <h2 class="title">{{ product.metafields.custom.info_section_title }}</h2>
       <div class="line"></div>
