--- a/snippets/product-supplement-info-section.liquid
+++ b/snippets/product-supplement-info-section.liquid
@@ -1,10 +1,10 @@
 <section id="info-section">
   <div class="container">
-    {% if product.title contains "Curalin Mounthly Deals" %}
-    <img class="main-image" src="{{ "men-with-text.png" | asset_url }}" width="362" height="839" alt="Joint Info" loading="lazy">
-    {% else %}
+    
+    <img class="main-image-mb" src="{{ "men-with-text.png" | asset_url }}" width="362" height="839" alt="Joint Info" loading="lazy">
+   
     <img class="main-image" src="{{ "product-supplement-info-section-main-image.png" | asset_url }}" width="925" height="688" alt="Joint Info" loading="lazy">
-{% endif %}
+
     <div class="content">
       <h2 class="title">{{ product.metafields.custom.info_section_title }}</h2>
       <div class="line"></div>
@@ -31,6 +31,10 @@
 
   #info-section .main-image {
     margin-left: -300px;
+  }
+
+  #info-section .main-image-mb {
+    display:none;
   }
 
   #info-section h2 {
@@ -61,6 +65,11 @@
     #info-section .main-image {
       display: none;
     }
+
+    #info-section .main-image-mb {
+      display:flex;
+    }
+  
 
     #info-section .content {
       max-width: 100%;
