--- a/snippets/product-all-in-one-cta-section-actions.liquid
+++ b/snippets/product-all-in-one-cta-section-actions.liquid
@@ -86,6 +86,10 @@
       max-width: unset
     }
 
+    .product-actions .submit-wrap button span:first-child {
+      font-size: 3vw;
+    }
+
     .submit-wrap .qty-data .qty-control {
       border: 1px solid #ffb22d
     }
