--- a/snippets/product-all-in-one-cta-section.liquid
+++ b/snippets/product-all-in-one-cta-section.liquid
@@ -4,6 +4,7 @@
       {% if product.images.size > 1 %}
         {% render 'product-all-in-one-cta-section-gallery', isCuralinContent: isCuralinContent %}
       {% else %}
+      {% unless product.title contains "Curalin Mounthly Deals" %}
         <img src="{{ product.images[0].src | image_url }}" alt="{{ product.images[0].alt }}" class="product-image" loading="lazy">
         <p class="multiplier">X2</p>
 
@@ -27,6 +28,7 @@
             }
           </style>
         {% endif %}
+      {% endunless %}
       {% endif %}
     </div>
 
