--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -235,7 +235,7 @@
 <script>
   productThumbsAllInOne = new Swiper('#product-thumbs-slider-sc', {
     slidesPerView: 'auto',
-    spaceBetween: 2,
+    spaceBetween: 10,
     watchSlidesVisibility: true,
     grabCursor: true,
     loop: false,
@@ -247,8 +247,8 @@
   });
 
   productSliderAllInOne = new Swiper('#product-main-slider-sc', {
-    slidesPerView: 1,
-    spaceBetween: 2,
+    slidesPerView: 'auto',
+    spaceBetween: 15,
     centeredSlides: true,
     watchSlidesVisibility: false,
     loop: false,
