--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -247,7 +247,7 @@
   });
 
   productSliderAllInOne = new Swiper('#product-main-slider-sc', {
-    slidesPerView: 'auto',
+    slidesPerView: 1,
     spaceBetween: 15,
     centeredSlides: true,
     watchSlidesVisibility: false,
