--- a/snippets/product-all-in-one-cta-section.liquid
+++ b/snippets/product-all-in-one-cta-section.liquid
@@ -1,4 +1,4 @@
-<section class="cta-section">cta-section
+<section class="cta-section">
   <div class="container product-container">
     <div class="product-image-wrapper">
       {% comment %} If there are multiple images, render the gallery {% endcomment %}
