--- a/templates/product.all-in-one-thirty-day.liquid
+++ b/templates/product.all-in-one-thirty-day.liquid
@@ -18,7 +18,7 @@
 
 <div class="product-template-all-in-one">
   {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "green", logoFileName: "logo-white-black-friday.png" %}
-  {% render 'product-all-in-one-cta-section', badgesPosition: "cta", isBadges: true %}
+  {% render 'product-all-in-one-cta-section', badgesPosition: "cta", isBadges: true, isThirtyDay: true %}
   {% render 'thirty-day-product-challenge-section' %}
   {% render 'product-all-in-one-take-control', ctaTitle: "Join the Challenge!" %}
   {% render 'product-all-in-one-easy', ctaTitle: "Join the Challenge!" %}
