--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -113,6 +113,7 @@
     align-items: center;
     justify-content: center;
     margin-right: 20px;
+    margin-top: {% if isThirtyDay %}-27px{% endif %};
   }
 
 .text-features {
