--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -167,7 +167,7 @@
     }
 
     #product-feature-section .features .feature {
-      line-height: 20px;
+      line-height: {% if isThirtyDay %}24px {% endif %};
     }
 
     #product-feature-section .features .feature .feature-text {
