--- a/snippets/product-all-in-one-back-to-top.liquid
+++ b/snippets/product-all-in-one-back-to-top.liquid
@@ -24,7 +24,7 @@
       font-weight: bold;
       height: 50px;
       text-align: center;
-      border-radius: 30px;
+      border-radius: {% unless isThirtyDay %} 30px {% endunless %};
       position: fixed;
       bottom: 30px;
       left: 100px;
