--- a/snippets/product-all-in-one-back-to-top.liquid
+++ b/snippets/product-all-in-one-back-to-top.liquid
@@ -37,8 +37,8 @@
 
    #back-to-top-btn:hover {
       cursor: pointer;
-      background: #404733;
-      border: #404733;
+      background: {% if isThirtyDay %}#697938{% else %} #404733 {% endif %};
+      border: {% if isThirtyDay %}#697938{% else %} #404733 {% endif %};
   }
 
    #back-to-top-btn:active {
