--- a/snippets/product-all-in-one-back-to-top.liquid
+++ b/snippets/product-all-in-one-back-to-top.liquid
@@ -8,8 +8,8 @@
 
 <style>
   #back-to-top-btn {
-    background: linear-gradient(#5d8448, var(--dark-green));
-    border: 1px solid #468734;
+    background: {% if isThirtyDay %}#404733 {% else %} linear-gradient(#5d8448, var(--dark-green)){% endif %};
+    border: 1px solid {% if isThirtyDay %}#404733 {% else %}#468734{% endif %};
     color: #ffffff;
   }
 
