--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -53,7 +53,7 @@
   .commitement-for-you-wrapper .sub-title h3 {
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: clamp(34px, 2vw, 60px);
+    font-size: clamp(34px, 5vw, 60px);
     line-height: 35px;
     color: var(--dark-green);
   }
@@ -61,12 +61,13 @@
   .commitement-for-you-wrapper {
     display: flex;
     flex-direction: column;
-    width: 60%;
     margin: 0 auto;
   }
 
   .commit-sub-wrapper {
     display: flex;
+    max-width: 60%;
+    margin: 0 auto;
     padding-bottom: 30px;
   }
 
