--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -66,13 +66,14 @@
 
   .commit-sub-wrapper {
     display: flex;
-    max-width: 60%;
+    max-width: 69%;
     margin: 0 auto;
     padding-bottom: 30px;
   }
 
   .commit-sub-wrapper .commit-img {
     max-width: 20%;
+    object-fit: contain;
   }
 
   .sub-title .commit-img-mb {
@@ -85,6 +86,7 @@
     font-weight: 400;
     font-size: clamp(16px, 2vw, 20px);
     color: var(--dark-green);
+    line-height: 24px;
   }
 
   .commitment-we-proud {
