--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -222,7 +222,7 @@
 
      .commitments .commitment .commitment-text {
       max-width: unset;
-      line-height: unset;   
+      line-height: 24px;   
     }
   }
 
