--- a/snippets/thirty-day-commitement.liquid
+++ b/snippets/thirty-day-commitement.liquid
@@ -146,13 +146,14 @@
     background: var(--peach);
     color: white;
     border-radius: 50%;
-    min-width: 45px;
-    height: 45px;
-    font-size: 40px;
+    min-width: 30px;
+    height: 30px;
+    font-size: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-right: 20px;
+    margin-top: -15px;
   }
 
 
@@ -167,6 +168,9 @@
 
 
   @media screen and (max-width: 768px) {
+    .commitments .commitment .commitment-icon {
+      margin-top: unset;
+    }
     .commitments .commitment {
       max-width: unset;
     }
