--- a/snippets/trust-badges-widget.liquid
+++ b/snippets/trust-badges-widget.liquid
@@ -30,7 +30,7 @@
 
   #trust-badges-widget .trust-badge {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     text-align: center;
     align-items: center;
     text-transform: uppercase;
