--- a/snippets/product-all-in-one-cta-section.liquid
+++ b/snippets/product-all-in-one-cta-section.liquid
@@ -80,6 +80,7 @@
     text-align: center;
     letter-spacing: -0.01em;
     color: #404733;
+    margin-bottom: {% if isCuralinContent %} 30px {% endif %};
 
   }
 
