--- a/snippets/product-all-in-one-cta-section.liquid
+++ b/snippets/product-all-in-one-cta-section.liquid
@@ -69,7 +69,7 @@
     width: unset;
     max-width: 450px;
     grid-area: 1/2/2/3;
-    padding-bottom: {% if isCuralinContent %} 30px {% endif %};
+    padding-bottom: {% if isThirtyDay %} 30px {% endif %};
   }
 
   .cta-section .product-container .product-info h1 {
@@ -80,7 +80,7 @@
     text-align: center;
     letter-spacing: -0.01em;
     color: #404733;
-    margin-bottom: {% if isCuralinContent %} 30px {% endif %};
+    margin-bottom: {% if isThirtyDay %} 30px {% endif %};
   }
 
   .cta-section .product-image-wrapper {
