--- a/snippets/product-all-in-one-cta-section-reviews.liquid
+++ b/snippets/product-all-in-one-cta-section-reviews.liquid
@@ -14,6 +14,11 @@
 </div>
 
 <style>
+  #reviews-widget .rating-stars {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 20px;
+  }
   #reviews-widget .quotes {
     margin-bottom: 10px;
     font-size: 18px;
