--- a/snippets/product-all-in-one-cta-section-reviews.liquid
+++ b/snippets/product-all-in-one-cta-section-reviews.liquid
@@ -20,7 +20,9 @@
     padding-bottom: 20px;
   }
   #reviews-widget .quotes {
-    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
     font-size: 18px;
     line-height: 1.7rem;
     min-height: 50px
