--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -118,7 +118,9 @@
     background: var(--dark-green);
     border: 1px solid var(--dark-green);
     font-weight: 700;
-    font-size: clamp(14px, 2vw, 18px);
+    font-size: 25px;
+    line-height: 26px;
+    padding: 20px 60px;  
     color: var(--white);
     margin-left: unset;
     margin-top: 20px;
