--- a/snippets/thirty-day-challenge-is-for-you.liquid
+++ b/snippets/thirty-day-challenge-is-for-you.liquid
@@ -97,10 +97,11 @@
     background: var(--white-cream);
     border: 1px solid var(--white-cream);
     font-weight: 700;
-    font-size: clamp(14px, 2vw, 18px);
+    font-size: 28px;
     color: var(--dark-green);
     margin-left: unset;
-    
+    margin-top: 20px;    
+    line-height: 34px;
   }
 
   .challenge-for-you .container .cta-btn:hover {
@@ -162,6 +163,8 @@
       position: unset; 
       width: unset;
       z-index: unset;
+      font-size: 24px;
+      line-height: 24px;
 
     }
 
