--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -147,6 +147,7 @@
       text-align: left;
       font-size: 32px;
       line-height: 35px;
+      padding-bottom: unset;
     }
 
     .real-for-you .sub-title .description-overlay {
