--- a/snippets/thirty-day-what-is-for-you.liquid
+++ b/snippets/thirty-day-what-is-for-you.liquid
@@ -181,7 +181,7 @@
       position: unset; 
       width: unset;
       z-index: unset;
-      padding: unset;
+      padding: 20px 40px;
       font-size: 24px;
     }
 
