--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -107,6 +107,7 @@
   justify-content: center;
   border: solid 1px beige;
   border-radius: 50%;
+  top: 18px;
 }
 
 
@@ -450,6 +451,9 @@
   @media screen and (max-width: 323px) {
     .light-div {
       height: 225px;
+    }
+    .faq .faq-item .question:after {
+      right: 15vw;
     }
   }
     
