--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -448,13 +448,17 @@
 
   }
 
+  @media screen and (max-width: 350px){
+    .faq .faq-item .question:after {
+        right: 15vw;
+      }
+  }
+
   @media screen and (max-width: 323px) {
     .light-div {
       height: 225px;
     }
-    .faq .faq-item .question:after {
-      right: 15vw;
-    }
+   
   }
     
 </style>
