--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -191,16 +191,17 @@
     text-align: center;
   }
 
-  .cta-btn {
+  #challenge-features-section .cta-btn {
     font-weight: 100;
     background: var(--orange);
     text-align: center;
     border: 1px solid  var(--orange);
     border-radius: 4px;
     font-weight: 700;
-    font-size: clamp(14px, 2vw, 18px);
+    font-size: 25px;
+    line-height: 26px;
     color: var(--dark-green);
-    padding: 15px 40px;
+    padding: 15px 45px;
     box-shadow: 0px 5px 12.5px rgba(0, 0, 0, 0.15);
     transition: unset;
     margin-bottom: 20px;
@@ -208,7 +209,7 @@
     margin-top: -60px;
   }
 
-  .cta-btn:hover {
+  #challenge-features-section .cta-btn:hover {
     background: var(--light-orange);
   }
 
@@ -261,9 +262,10 @@
     }
   
 
-     .cta-btn {
+    #challenge-features-section .cta-btn {
       margin-left: unset;
-      bottom: -75px;
+      bottom: -80px;
+      font-size: 21px;
       left: 5%;
       position: absolute;
       width: 90%;
