--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -108,9 +108,10 @@
     border: 1px solid  var(--orange);
     border-radius: 4px;
     font-weight: 700;
-    font-size: clamp(14px, 2vw, 18px);
+    font-size: 25px;
+    line-height: 26px;
     color: var(--dark-green);
-    padding: 15px 40px;
+    padding: 15px 45px;
     box-shadow: 0px 5px 12.5px rgba(0, 0, 0, 0.15);
     transition: unset;
     margin-bottom: 20px;
@@ -321,6 +322,7 @@
       position: absolute;
       width: 90%;
       z-index: 2;
+      font-size: 21px;
     }
   }
 </style>
