--- a/snippets/thirty-day-challenge-is-for-you.liquid
+++ b/snippets/thirty-day-challenge-is-for-you.liquid
@@ -102,6 +102,7 @@
     margin-left: unset;
     margin-top: 20px;    
     line-height: 34px;
+    padding:15px 45px;
   }
 
   .challenge-for-you .container .cta-btn:hover {
