--- a/templates/page.thank-you-new.liquid
+++ b/templates/page.thank-you-new.liquid
@@ -1,1 +1,1 @@
-{% render 'ready-to-start-your-plan' %}
+{% render 'ready-to-start-your-plan', ctaButtonLink: '/collections/all' ctaTitle: 'YOUR 30 DAY PLAN AWAITS!' %}
