--- a/snippets/ready-to-start-your-plan.liquid
+++ b/snippets/ready-to-start-your-plan.liquid
@@ -95,8 +95,8 @@
   }
 
   .ready-to-start .container .cta-btn:hover {
-    background: var(--regular-green);
-    border: 1px solid  var(--regular-green);
+    background: var(--green);
+    border: 1px solid  var(--green);
   }
 
 
