--- a/snippets/ready-to-start-your-plan.liquid
+++ b/snippets/ready-to-start-your-plan.liquid
@@ -134,7 +134,7 @@
       width: unset;
       z-index: unset;
       padding: 20px 28px;
-      font-size: 17px;
+      font-size: clamp(17px, 2vw, 24px);
     }
 
   }
