--- a/snippets/ready-to-start-your-plan.liquid
+++ b/snippets/ready-to-start-your-plan.liquid
@@ -24,7 +24,7 @@
 
 <style>
   .ready-to-start {
-    background: var(--light-brown);
+    background-image: linear-gradient(to top, #d07d5b, #db8262, #e58869, #f08d70, #fb9378);
   }
 
   .ready-to-start .sub-title {
