--- a/snippets/ready-to-start-your-plan.liquid
+++ b/snippets/ready-to-start-your-plan.liquid
@@ -29,9 +29,13 @@
     background-image: linear-gradient(to top, #d07d5b, #db8262, #e58869, #f08d70, #fb9378);
   }
 
-  .thank-you-page-img {
+  .ready-to-start .thank-you-page-img {
     display: flex;
     justify-content: center;
+  }
+
+  .ready-to-start .thank-you-page-img .whistle-img {
+    padding-top: 20px;
   }
 
   .ready-to-start .sub-title {
