--- a/snippets/ready-to-start-your-plan.liquid
+++ b/snippets/ready-to-start-your-plan.liquid
@@ -26,7 +26,7 @@
 
 <style>
   .ready-to-start {
-    background-image: linear-gradient(to top, #d07d5b, #db8262, #e58869, #f08d70, #fb9378);
+    background: linear-gradient(#D07D5B, #FB9378);
   }
 
   .ready-to-start .thank-you-page-img {
