--- a/snippets/ready-to-start-your-plan.liquid
+++ b/snippets/ready-to-start-your-plan.liquid
@@ -113,6 +113,11 @@
 
 
   @media screen and (max-width: 768px) {
+
+  .ready-to-start .thank-you-page-img .whistle-img {
+      padding-top: 90px;
+    }
+
     .border-desk {
       display: none;
     }
