--- a/snippets/ready-to-start-your-plan.liquid
+++ b/snippets/ready-to-start-your-plan.liquid
@@ -4,7 +4,7 @@
         <img class="whistle-img" src="{{ 'thank-you-page-whistle.png' | asset_url }}" width="268" height="171" alt="thank-you-whistle" loading="lazy">
     </div>
     <div class="sub-title">
-      <h3><b>What’s in it for you?</b></h3>
+      <h3><b>Ready to start your 30 day plan? </b></h3>
     </div>
    
     <div class="descripton-wrapper">
@@ -40,9 +40,9 @@
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
     font-size: 60px;
-    line-height: 35px;
-    color: var(--dark-green);
-    padding-bottom: 30px;
+    line-height: 50px;
+    text-align: center;
+    color: #FFFFFF;
   }
 
 
