--- a/snippets/ready-to-start-your-plan.liquid
+++ b/snippets/ready-to-start-your-plan.liquid
@@ -4,7 +4,7 @@
         <img class="whistle-img" src="{{ 'thank-you-page-whistle.png' | asset_url }}" width="268" height="171" alt="thank-you-whistle" loading="lazy">
     </div>
     <div class="sub-title">
-      <h3><b>Ready to start your 30 day plan? </b></h3>
+      <h3>Ready to start your 30 day plan?</h3>
     </div>
    
     <div class="descripton-wrapper">
@@ -101,11 +101,10 @@
 
  
 
-    .ready-to-start .sub-title h3 {
-      text-align: left;
-      font-size: 32px;
-      line-height: 35px;
-      padding-bottom: unset;
+    .ready-to-start .sub-title h3 {    
+      font-size: 40px;
+      line-height: 50px;
+     
     }
 
 
