--- a/snippets/ready-to-start-your-plan.liquid
+++ b/snippets/ready-to-start-your-plan.liquid
@@ -99,18 +99,14 @@
       padding-top: 90px;
     }
 
- 
-
-    .ready-to-start .sub-title h3 {    
-      font-size: 40px;
-      line-height: 50px;
-     
+ .ready-to-start .sub-title h3 {
+    text-align: center;
+    font-size: 32px;
+    line-height: 35px;
+    padding-bottom: unset;
     }
 
-
-
-
-
+ 
     .ready-to-start-item-description {
       text-align: left;
     }
