--- a/snippets/ready-to-start-your-plan.liquid
+++ b/snippets/ready-to-start-your-plan.liquid
@@ -101,7 +101,7 @@
 
  .ready-to-start .sub-title h3 {
     text-align: center;
-    font-size: 32px;
+    font-size: clamp(32px, 2vw, 40px);
     line-height: 35px;
     padding-bottom: unset;
     }
