--- a/snippets/ready-to-start-your-plan.liquid
+++ b/snippets/ready-to-start-your-plan.liquid
@@ -9,7 +9,7 @@
    
     <div class="descripton-wrapper">
     <div class="ready-to-start-item-description">
-      If you’re not satisfied with the program, we’ll give you your money back for up to 60 days! That’s how confident we feel about the program. We’re your partner through the whole journey. 
+        Access your plan below after you answer a few questions so we can get to know you a bit better!
     </div>
     </div>
       <div class="button-wrapper">
@@ -59,12 +59,13 @@
   }
 
   .ready-to-start-item-description {
-    font-family: 'DM Sans';
+    font-family: 'PP Radio Grotesk';
+    font-style: normal;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 28px;
+    line-height: 37px;
     text-align: center;
-    color: var(--dark-green);
-
+    color: #FFFFFF;
   }
 
   .button-wrapper {
@@ -108,7 +109,8 @@
 
  
     .ready-to-start-item-description {
-      text-align: left;
+      font-size: 27px;
+      line-height: 32px;
     }
 
     .ready-to-start .container .cta-btn {  
