--- a/snippets/ready-to-start-your-plan.liquid
+++ b/snippets/ready-to-start-your-plan.liquid
@@ -59,6 +59,8 @@
   }
 
   .ready-to-start-item-description {
+    margin: 0 auto;
+    max-width: 50%;
     font-family: 'PP Radio Grotesk';
     font-style: normal;
     font-weight: 400;
@@ -109,6 +111,7 @@
 
  
     .ready-to-start-item-description {
+        max-width: unset;
       font-size: 27px;
       line-height: 32px;
     }
