--- a/templates/page.thank-you-new.liquid
+++ b/templates/page.thank-you-new.liquid
@@ -1,1 +1,9 @@
-{% render 'ready-to-start-your-plan', ctaButtonLink: '/collections/all' ctaTitle: 'YOUR 30 DAY PLAN AWAITS!' %}
+{% assign realChanges = 'thirty-day-challenge-what-is-for-you-01.png*Maintain Glucose:Supporting your overall health, mobility, and mood!
+|thirty-day-challenge-what-is-for-you-02.png*Feel better:You’ll feel <b> and </b> look great!
+|thirty-day-challenge-what-is-for-you-03.png*Get energy:You have <b> energy </b> to go the extra mile in your life!
+|thirty-day-challenge-what-is-for-you-04.png*Enjoy food:You won’t dread healthy cooking. You’ll <b> enjoy </b> it!
+' | split: '|' %}
+
+
+
+{% render 'thank-you-new-ready-to-start-your-plan', ctaButtonLink: '/collections/all' ctaTitle: 'YOUR 30 DAY PLAN AWAITS!' %}
