--- a/snippets/thank-you-new-weeks.liquid
+++ b/snippets/thank-you-new-weeks.liquid
@@ -32,7 +32,7 @@
   .weeks-for-you-wrapper {
     display: flex;
     flex-wrap: wrap;
-    padding-bottom: 40px;
+    padding: 40px 0;
   }
 
   .border-desk {
@@ -76,7 +76,6 @@
     }
 
     .weeks-for-you-wrapper {
-      padding-bottom: unset;
       gap: 20px;
     }
 
