--- a/snippets/thank-you-new-weeks.liquid
+++ b/snippets/thank-you-new-weeks.liquid
@@ -36,7 +36,7 @@
   }
 
   .border-desk {
-    border-top: 1px solid var(--dark-green);
+    border: 1px solid var(--dark-green);
     width: 60%;
     margin: 0 auto;  
   }
