--- a/snippets/thank-you-new-weeks.liquid
+++ b/snippets/thank-you-new-weeks.liquid
@@ -7,8 +7,9 @@
         <div class="change-item-thumbnail">
           <img src="{{ realChange | asset_url | split: "*" | first }}" width="102" height="86" alt="">
           {{ realChange | split: "*" | last | split: ":" | first }}
+          <div class="border-desk"></div>  
         </div>
-        <div class="border-desk"></div>  
+        
         <div class="rw-item-description">
         {{ realChange | split: "*" | last | split: ":" | last }}
         </div>
@@ -36,9 +37,9 @@
   }
 
   .border-desk {
-    border: 1px solid var(--dark-green);
-    width: 40%;
-    margin: 0 auto;  
+    border: 1px solid #B9C86B;
+    width: 35%;
+    margin: 20px auto;  
   }
 
   .change-item-and-desc {
