--- a/snippets/thank-you-new-weeks.liquid
+++ b/snippets/thank-you-new-weeks.liquid
@@ -10,7 +10,7 @@
           <div class="border-desk"></div>  
         </div>
         
-        <div class="rw-item-description">
+        <div class="weeks-item-description">
         {{ realChange | split: "*" | last | split: ":" | last }}
         </div>
       </div>
@@ -61,7 +61,13 @@
     align-items: center;
   }
 
-
+      .weeks-item-description {
+        font-family: 'DM Sans';
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 24px;
+      
+      }
 
 
  
