--- a/snippets/thank-you-new-weeks.liquid
+++ b/snippets/thank-you-new-weeks.liquid
@@ -92,7 +92,7 @@
     }
 
     .change-item-thumbnail {
-      flex-direction: row;
+      flex-direction: column;
       width: 100%;
       font-size: 24px;
       justify-content: flex-start;
