--- a/snippets/thank-you-new-weeks.liquid
+++ b/snippets/thank-you-new-weeks.liquid
@@ -99,5 +99,10 @@
       text-align: left;
     }
 
+    .weeks-item-description {
+        margin: 0 auto;
+        max-width: 300px;
+    }
+
   }
 </style>
