--- a/templates/page.thank-you-new.liquid
+++ b/templates/page.thank-you-new.liquid
@@ -7,4 +7,5 @@
 
 
 {% render 'thank-you-new-ready-to-start-your-plan', ctaButtonLink: '/collections/all' ctaTitle: 'YOUR 30 DAY PLAN AWAITS!' %}
+{% render 'thank-you-new-best-result' %}
 {% render 'thank-you-new-weeks', realChanges: realChanges %}
