--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -5,6 +5,11 @@
   
   <div class="container">
    
+  <div class="best-result-title">
+      <h3>How to get the best results
+      over the next 30 days:</h3>
+    </div>
+
   
   </div>
 </section>
@@ -23,6 +28,15 @@
    position: absolute;
    right: 0;
    bottom: 10px;
+  }
+
+  .best-result-title {
+    font-family: 'PP Radio Grotesk';
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 60px;
+    text-align: center;
+    color: #404733;
   }
 
 
