--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -59,6 +59,11 @@
     right: -30px;
     bottom: -40px;
   }
+
+  .best-result-title {
+    font-size: 40px;
+    line-height: 40px;
+  }
    
   }
 </style>
