--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -21,7 +21,8 @@
 
   .thank-you-new-best-result .pink-leaf {
     position: absolute;
-    top: 50px;
+    top: 0px;
+    max-width: 30%;
   }
 
   .thank-you-new-best-result .green-leaf {
