--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -28,7 +28,7 @@
   .thank-you-new-best-result .green-leaf {
    position: absolute;
    right: 0;
-   bottom: 10px;
+   bottom: 0;
   }
 
   .best-result-title {
