--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -17,6 +17,7 @@
 <style>
   .thank-you-new-best-result {
     position: relative;
+    overflow: hidden;
   }
 
   .thank-you-new-best-result .pink-leaf {
