--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -9,6 +9,9 @@
       How to get the best results
       over the next 30 days:
     </div>
+    <div class="consistency-text">
+     <span class="consistency">Consistency</span> is key to success. By consistently following your meal plan, taking your Curalin, and engaging in your movement routine, you will be well on your way to achieving your goals!
+    </div>
 
   
   </div>
@@ -41,6 +44,21 @@
     color: #404733;
     max-width: 70%;
     margin: auto;
+  }
+
+  .consistency-text {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 36px;
+    color: #404733;
+    
+  }
+
+  .consistency-text.consistency {
+    font-weight: 700;
+    font-size: 50px;
   }
 
 
