--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -9,9 +9,9 @@
       How to get the best results
       over the next 30 days:
     </div>
-    <div class="consistency-text">
+    <p class="consistency-text">
      <span class="consistency">Consistency</span> is key to success. By consistently following your meal plan, taking your Curalin, and engaging in your movement routine, you will be well on your way to achieving your goals!
-    </div>
+    </p>
 
   
   </div>
@@ -53,6 +53,8 @@
     font-size: 40px;
     line-height: 36px;
     color: #404733;
+    max-width: 70%;
+    margin: auto;
     
   }
 
