--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -43,7 +43,7 @@
     text-align: center;
     color: #404733;
     max-width: 70%;
-    margin: auto;
+    margin: 20px auto;
   }
 
   .consistency-text {
