--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -71,7 +71,7 @@
 
   @media screen and (max-width: 768px) {
     .thank-you-new-best-result .pink-leaf {
-      
+      max-width: 35%;
     }
 
     .thank-you-new-best-result .green-leaf {
