--- a/snippets/challenge-section.liquid
+++ b/snippets/challenge-section.liquid
@@ -22,7 +22,7 @@
         {% endfor %}
       </div>
 
-      <img class="main-image" src="{{ 'challenge-section-main-img.png' | asset_url }}" alt="">
+      <img class="main-image" src="{{ 'challenge-section-main-img.png' | asset_url }}" alt="" loading="lazy">
     </div>
   </div>
 </section>
