--- a/snippets/new-year-hero-banner-content-curalin.liquid
+++ b/snippets/new-year-hero-banner-content-curalin.liquid
@@ -7,10 +7,10 @@
         <div class="subtitle">{{ subTitle }}</div>
         <a class="cta-btn" href="{{ ctaButtonLink }}">{{ ctaTitle }}</a>
       </div>
-      <img class="main-img" src="{{ 'mask-and-bottle.png' | asset_url }}" width="1039" height="528" alt="bottle-hand-mask" loading="lazy">
+      <img class="main-img" src="{{ 'mask-and-bottle.png' | asset_url }}" width="1039" height="528" alt="bottle-hand-mask">
     </div>
   </div>
-  <img class="main-img-mb" src="{{ 'mask-and-bottle-mb.png' | asset_url }}" width="750" height="1084" alt="bottle-hand-mask-mb" loading="lazy">
+  <img class="main-img-mb" src="{{ 'mask-and-bottle-mb.png' | asset_url }}" width="750" height="1084" alt="bottle-hand-mask-mb">
 </section>
 
 <style>
