--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -42,8 +42,8 @@
     line-height: 60px;
     text-align: center;
     color: #404733;
-    max-width: 70%;
-    margin: 20px auto;
+    max-width: 53%;
+    margin-left: 20%;
   }
 
   .consistency-text {
@@ -93,6 +93,7 @@
   .consistency-text {
     max-width: 78%;
     line-height: 30px;
+    margin-left: unset;
   }
    
   }
