--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -1,7 +1,7 @@
 <section class="thank-you-new-best-result">
   
     <img class="pink-leaf" src="{{ 'thank-you-best-results-leaf.png' | asset_url }}" width="279" height="326" alt="pink leaf">
-    <img class="green-leaf" src="{{ 'thank-you-best-results-bottle.png' | asset_url }}" width="367" height="384" alt="bottle with phone">
+    <img class="result-bottle" src="{{ 'thank-you-best-results-bottle.png' | asset_url }}" width="367" height="384" alt="bottle with phone">
   
   <div class="container">
    
@@ -29,7 +29,7 @@
     max-width: 30%;
   }
 
-  .thank-you-new-best-result .green-leaf {
+  .thank-you-new-best-result .result-bottle {
    position: absolute;
    right: 0;
    bottom: 0;
@@ -74,11 +74,11 @@
       max-width: 35%;
     }
 
-    .thank-you-new-best-result .green-leaf {
+    .thank-you-new-best-result .result-bottle {
      
     }
   
-  .thank-you-new-best-result .green-leaf {
+  .thank-you-new-best-result .result-bottle {
     position: absolute;
     right: -30px;
     bottom: -40px;
