--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -42,8 +42,8 @@
     line-height: 60px;
     text-align: center;
     color: #404733;
-    max-width: 53%;
-    margin-left: 20%;
+    max-width: 70%;
+    margin: 20px auto;
   }
 
   .consistency-text {
@@ -53,8 +53,8 @@
     font-size: clamp(30px, 2vw, 40px);
     line-height: 36px;
     color: #404733;
-    max-width: 70%;
-    margin: auto;
+    max-width: 53%;
+    margin-left: 20%;
     
   }
 
@@ -74,9 +74,7 @@
       max-width: 35%;
     }
 
-    .thank-you-new-best-result .result-bottle {
-     
-    }
+ 
   
   .thank-you-new-best-result .result-bottle {
     position: absolute;
