--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -63,7 +63,11 @@
     font-size: clamp(40px, 2vw, 50px);
   }
 
-
+@media screen and (max-width: 1130px) {
+  .thank-you-new-best-result .result-bottle {
+    right: -50px;
+  }
+}
 
 
 
