--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -68,6 +68,11 @@
     right: -50px;
   }
 }
+@media screen and (max-width: 987px) {
+  .thank-you-new-best-result .result-bottle {
+    right: -70px;
+  }
+}
 
 
 
