--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -85,6 +85,9 @@
 
 
   @media screen and (max-width: 768px) {
+    .thank-you-new-best-result {
+      overflow: hidden;
+    }
     .thank-you-new-best-result .pink-leaf {
       max-width: 35%;
     }
