--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -70,18 +70,9 @@
 }
 @media screen and (max-width: 987px) {
   .thank-you-new-best-result .result-bottle {
-    right: -70px;
+    width: 30vw;
   }
 }
-
-@media screen and (max-width: 941px) {
-  .thank-you-new-best-result .result-bottle {
-    
-  }
-}
-
-
-
 
 
   @media screen and (max-width: 768px) {
