--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -87,9 +87,7 @@
  
   
   .thank-you-new-best-result .result-bottle {
-    position: absolute;
-    right: -30px;
-    bottom: -40px;
+    right: 30vw;
   }
 
   .best-result-title {
