--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -88,6 +88,8 @@
   
   .thank-you-new-best-result .result-bottle {
     right: 30vw;
+    width: 43vw;
+    bottom: -18px;
   }
 
   .best-result-title {
