--- a/snippets/thank-you-new-best-result.liquid
+++ b/snippets/thank-you-new-best-result.liquid
@@ -95,7 +95,7 @@
   .best-result-title {
     font-size: 40px;
     line-height: 40px;
-    max-width: unset;
+    max-width: 78%;
   }
 
   .consistency-text {
