--- a/templates/page.thank-you-new.liquid
+++ b/templates/page.thank-you-new.liquid
@@ -9,4 +9,4 @@
 {% render 'thank-you-new-ready-to-start-your-plan', ctaButtonLink: '/collections/all' ctaTitle: 'YOUR 30 DAY PLAN AWAITS!' %}
 {% render 'thank-you-new-best-result' %}
 {% render 'thank-you-new-weeks', realChanges: realChanges %}
-{% render 'product-faq-section', bgColor: "var(--lighter-green)" %}
+{% render 'product-faq-section', bgColor: "$color_17" %}
