--- a/assets/common.scss
+++ b/assets/common.scss
@@ -14,6 +14,8 @@ $color_13: var(--green);
 $color_14: var(--red);
 $color_15: var(--white);
 $color_16: var(--dark);
+$color_17: #FFF1E8;
+
 $font-family_1: monospace,monospace;
 $font-family_2: inherit;
 $font-family_3: icoFont;
