--- a/assets/common.scss
+++ b/assets/common.scss
@@ -14,7 +14,6 @@ $color_13: var(--green);
 $color_14: var(--red);
 $color_15: var(--white);
 $color_16: var(--dark);
-$color_17: #FFF1E8;
 
 $font-family_1: monospace,monospace;
 $font-family_2: inherit;
@@ -1343,6 +1342,7 @@ body.compensate-for-scrollbar {
 	--dark-peach: #CC6F4F;
 	--peach: #F59E80;
 	--light-peach: #f6cdbf;
+	--light-pink: #FFF1E8;
 }
 footer {
 	.container {
