--- a/snippets/product-faq-section.liquid
+++ b/snippets/product-faq-section.liquid
@@ -1,3 +1,10 @@
+{% if product.metafields.custom.faq.value %}
+  
+{% assign variable = product.metafields.custom.faq.value %}
+{% else %}
+  
+{% endif %}
+
 <section class="faq-section">
   <div class="container">
     <div class="titles">
