--- a/templates/page.thank-you-new.liquid
+++ b/templates/page.thank-you-new.liquid
@@ -11,7 +11,7 @@
 
 |Can I take Curalin with other treatments?:CuraLin is 100% natural and is very safe to use alongside your medications. Like any supplement, it is always recommended to consult with a doctor before starting CuraLin.
 
-|How many capsules should be taken?:<br>Day 1+2: 1 capsule, WITH every meal<br><br>Day 3+4: 1 capsule, 30 minutes AFTER every meal<br><br>Day 5+: 2 capsules 30 minutes AFTER every meal<br>
+|How many capsules should be taken?:<br>Day 1+2: 1 capsule, WITH every meal<br>Day 3+4: 1 capsule, 30 minutes AFTER every meal<br>Day 5+: 2 capsules 30 minutes AFTER every meal<br>
 
 |Will I be able to do all of the movement routines? 
 :We’ll start by asking about your fitness level and limitations so that you only receive movement routines that you feel confident tackling!
