--- a/templates/page.thank-you-new.liquid
+++ b/templates/page.thank-you-new.liquid
@@ -4,14 +4,14 @@
 |thank-you-week-4.png*Week 4:Move forward with a carb SMART diet that you can actually maintain.
 ' | split: '|' %}
 
-{% assign faqItems = "When should I start the 30 day challenge?:We recommend starting as soon as you receive your plan. Starting is the hardest part, but we’re here to cheer you on and help you get started!
-|Will I have fun?:Yes! We’re here to celebrate every win with you! No matter how big, or how small. 
-|What should I expect?:After a few weeks on your plan, you should expect to be sleeping better, having more energy, and having great maintenance of your glucose levels!
-|Who do I speak to if I have questions about Curalin?: We are available for you 24/7 with any questions you may have! You may schedule a Curalin expert at any time. 
+{% assign faqItems = "When should I start the 30 day challenge?*We recommend starting as soon as you receive your plan. Starting is the hardest part, but we’re here to cheer you on and help you get started!
+|Will I have fun?*Yes! We’re here to celebrate every win with you! No matter how big, or how small. 
+|What should I expect?*After a few weeks on your plan, you should expect to be sleeping better, having more energy, and having great maintenance of your glucose levels!
+|Who do I speak to if I have questions about Curalin?* We are available for you 24/7 with any questions you may have! You may schedule a Curalin expert at any time. 
 
-|Can I take Curalin with other treatments?:CuraLin is 100% natural and is very safe to use alongside your medications. Like any supplement, it is always recommended to consult with a doctor before starting CuraLin.
+|Can I take Curalin with other treatments?*CuraLin is 100% natural and is very safe to use alongside your medications. Like any supplement, it is always recommended to consult with a doctor before starting CuraLin.
 
-|How many capsules should be taken?:
+|How many capsules should be taken?*
 · Day 1+2: 1 capsule, WITH every meal
 
 · Day 3+4: 1 capsule, 30 minutes AFTER every meal
@@ -20,9 +20,9 @@
 
 
 |Will I be able to do all of the movement routines? 
-:We’ll start by asking about your fitness level and limitations so that you only receive movement routines that you feel confident tackling!
+*We’ll start by asking about your fitness level and limitations so that you only receive movement routines that you feel confident tackling!
 
-|What do I do if I don’t like certain meals on my meal plan?:No biggie! Rotating and repeating meals to your liking is totally fine! Just make sure the meals you’re replacing follow the same carb-cycling theme day you’re on! 
+|What do I do if I don’t like certain meals on my meal plan?*No biggie! Rotating and repeating meals to your liking is totally fine! Just make sure the meals you’re replacing follow the same carb-cycling theme day you’re on! 
 
 "
 | split: '|' %}
