--- a/snippets/sale-banner.liquid
+++ b/snippets/sale-banner.liquid
@@ -257,7 +257,7 @@
     position: relative;
     min-height: 80px;
     display: flex;
-    justify-content: space-between;
+    justify-content: {% if isOnlyLogo %} center {% else %} space-between {% endif %};
     align-items: center;
   }
 
