--- a/snippets/product-all-in-one-cta-section.liquid
+++ b/snippets/product-all-in-one-cta-section.liquid
@@ -52,7 +52,9 @@
   {% endif %}
 </section>
 
+{% unless isThirtyDay %}
 <div class="container line" style="border-bottom: 1px solid {{ bottomLineColor }}"></div>
+{% endunless %}
 
 
 <style>
